<resources>
    <string name="app_name">Dictionary App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="estrela_bot_o_favorito">Estrela botão favorito</string>
    <string name="x_para_sair">X para sair</string>
    <string name="meanings">Meanings</string>
    <string name="exit">Exit</string>
    <string name="next">Next</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="new_user_sign_up">New member? <b>Sign Up</b></string>
    <string name="create_an_account_here">Create an account here</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="previous">Previous</string>
    <string name="error_word">Error searching word</string>
    <string name="save_data">Save data</string>
    <string name="you_don_t_have_any_favorite_words_yet">You don\'t have any favorite words yet</string>
    <string name="you_can_start_by_adding_some_words_to_your_favorite_list">Browse the words and favorite your favorites!</string>
    <string name="you_have_no_history_yet">You have no history yet</string>
    <string name="browse_words_to_have_them_displayed_here">Browse words to have them displayed here!</string>
    <string name="no_more_words">No more words</string>
    <string name="no_audio">No audio</string>
    <string name="add_favorite_msg">Added to favorites</string>
    <string name="erro_add_favorite_msg">Error adding to favorites</string>
    <string name="remov_favorties_msg">Removed  from favorites</string>
    <string name="erro_remov_favorites_msg">\"Error removing from favorites \"</string>
    <string name="title_words">Words</string>
    <string name="title_history">History</string>
    <string name="title_favorites">Favorites</string>
    <string name="email_required">Email is required</string>
    <string name="passowrd_required">Password is required</string>
    <string name="login_fail">Login failed</string>
    <string name="fill_all_fields_msg">Please fill all fields</string>
    <string name="register_sucess_msg">User registered successfully</string>
    <string name="register_failed_msg">Registration failed</string>
    <string name="word_not_found">Undefined word in our database</string>
    <string name="no_audio_available">No Audio Available</string>
    <string name="start_exploring">Start exploring</string>
    <string name="searching_words">Searching words...</string>
</resources>